feat(naming): change

--- a/boilerplate/app/i18n/en.json
+++ b/boilerplate/app/i18n/en.json
@@ -8,7 +8,7 @@
     "invalidEmail": "Invalid email address."
   },
   "welcomeScreen": {
-    "poweredBy": "POWERED BY IGNITE",
+    "poweredBy": "POWERED BY CLOUDPRESSER",
     "readyForLaunch": "Ready for launch.",
     "continue": "CONTINUE"
   },
